# MAT

./: .gitignore  Makefile.am  Makefile.in  README.md  config.h.in  configure.ac  todo
include/: error.h  eval.h  main.h  matrix_op.h  mnode.h  sll.h  stack.h  util_text.h
src/: error.c  eval.c  main.c  matrix_op.c  mnode.c  sll.c  stack.c  util_text.c
